# edge

./: .gitignore  CMakeLists.txt  README.md  build.bat
EdgeiOS/EdgeiOS/: ContentView.swift  DirectionalPadView.swift  EDGEiOS-Bridging-Header.h  EdgeiOSApp.swift  EmulatorBridge.h  EmulatorBridge.mm  EmulatorMetalView.swift  EmulatorView.swift  GameScreen.swift  RomsListView.swift  SaveStateWrapper.h  SaveStateWrapper.mm  Shaders.metal
EdgeiOS/EdgeiOS.xcodeproj/: project.pbxproj
EdgeiOS/EdgeiOS.xcodeproj/project.xcworkspace/xcuserdata/edwardpalmer.xcuserdatad/: UserInterfaceState.xcuserstate
EdgeiOS/EdgeiOS.xcodeproj/xcuserdata/edwardpalmer.xcuserdatad/xcschemes/: xcschememanagement.plist
EdgeiOS/EdgeiOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
EdgeiOS/EdgeiOSTests/: EdgeiOSTests.swift
EdgeiOS/EdgeiOSUITests/: EdgeiOSUITests.swift  EdgeiOSUITestsLaunchTests.swift
cmake/: FindSDL2.cmake
include/: AddressRouter.hpp  BitCommand.hpp  CBCommand.hpp  CPU.hpp  CallCommand.hpp  Command.hpp  CommandFactory.hpp  Destination.hpp  JumpCommand.hpp  JumpOpcode.hpp  LoadCommand.hpp  MMU.hpp  MathCommand.hpp  MiscCommand.hpp  NopCommand.hpp  NopOpcode.hpp  Opcode.hpp  Opcodes.hpp  PPU.hpp  Palette.hpp  Pixel.hpp  PixelFIFO.hpp  ROM.hpp  RestartCommand.hpp  ReturnCommand.hpp  Screen.hpp  Sprite.hpp  StackCommand.hpp  UnimplementedCommand.hpp  Utils.hpp  address_router.h  bit_command.h  call_command.h  cartridge.h  cb_command.h  command.h  command_factory.h  constants.h  cpu.h  destination.h  (+31 more)
src/: AddressRouter.cpp  BitCommand.cpp  CBCommand.cpp  CPU.cpp  CallCommand.cpp  Command.cpp  CommandFactory.cpp  JumpCommand.cpp  JumpOpcode.cpp  LoadCommand.cpp  MMU.cpp  MathCommand.cpp  MiscCommand.cpp  NopCommand.cpp  NopOpcode.cpp  Opcodes.cpp  PPU.cpp  PixelFIFO.cpp  ROM.cpp  RestartCommand.cpp  ReturnCommand.cpp  Screen.cpp  Sprite.cpp  StackCommand.cpp  UnimplementedCommand.cpp  Utils.cpp  address_router.cc  bit_command.cc  call_command.cc  cartridge.cc  cb_command.cc  command_factory.cc  cpu.cc  input_controller.cc  interrupt_controller.cc  interrupt_controller.cpp  jump_command.cc  load_command.cc  main.cc  main.cpp  (+24 more)
tests/: acid_test.py  address_router_test.cc  address_router_test.cpp  bit_commands_test.cc  bit_commands_test.cpp  call_command_test.cc  call_command_test.cpp  cartridge_test.cc  cb_command_test.cc  cb_command_test.cpp  cpu_registers_test.cc  cpu_registers_test.cpp  input_controller_test.cc  interrupt_controller_test.cc  interrupt_controller_test.cpp  jump_command_test.cc  jump_command_test.cpp  load_command_test.cc  math_command_test.cc  math_command_test.cpp  misc_command_test.cc  misc_command_test.cpp  mmu_test.cc  mmu_test.cpp  noise_voice_test.cc  ppu_test.cc  ppu_test.cpp  pulse_voice_test.cc  sound_controller_test.cc  sprite_test.cc  sprite_test.cpp  stack_test.cc  stack_test.cpp  timer_controller_test.cc
tests/roms/: noise.asm  pulse1.asm  pulse2.asm  wave.asm
